--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -131,8 +131,9 @@ border-color: gold;
   
   <div class="nav-links">
     <a href="/">🏠 • Home</a>
-    <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a><a href="/tools/temp-mail">📧 • Temp Mail Gen </a>
-      <a href="/tools/temp-mail">📧 • Temp Mail Gen </a>
+    <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a>
+    <a href="/tools/temp-mail">📧 • Temp Mail Gen </a>
+    <a href="/tools/qr-code-generator/">🔳 • Qr Code Gen </a>
     <a href="/tools/email-sender">📨 • Email Sender </a>
     <a href="/privacy-policy">🔏 • Privacy Policy </a>
     <a href="/about-us">🔖 • About Us </a>
