--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -108,6 +108,7 @@
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
 <h1>AI code generator : generate code using AI in any language Without Login</h1>
+  <h3 style="color:cyan;">🥳 A new 100 X Better Model is comming in this site to generate and explain code with more features</h3>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
@@ -120,6 +121,7 @@
     box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white;">
   GENERATE CODE  
   </button>
+  <h3 style="color: cyan;">🥳 A new 100 X Better Model is comming in this site to generate and explain code with more features</h3>
 </div>
 <br>
 
