--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -108,7 +108,7 @@
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
 <h1>AI code generator : generate code using AI in any language Without Login</h1>
-  <h3 style="color:cyan;">🥳 A new 100 X Better Model is comming in this site to generate and explain code with more features</h3>
+  <h3 style="color:cyan;">🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h3>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
@@ -121,7 +121,7 @@
     box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white;">
   GENERATE CODE  
   </button>
-  <h3 style="color: cyan;">🥳 A new 100 X Better Model is comming in this site to generate and explain code with more features</h3>
+  <h3 style="color: cyan;">🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h3>
 </div>
 <br>
 
@@ -184,7 +184,7 @@ prompt_.focus();
         return;
       };
       prompt_.blur();
-      gh.innerHTML = "GENERATING YOUR CODE.. <br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ <br> Please Dont close the tab this process can take upto 10 seconds Please Be patient, Thank You <br> <div style='margin-top: 8px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> <br> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code";
+      gh.innerHTML = "<strong><h3>🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h3></strong> <br> <hr> <br> GENERATING YOUR CODE.. <!---<br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ ---> <br> Please Dont close the tab this process can take upto 10 seconds Please Be patient, Thank You <br> <div style='margin-top: 8px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> <br> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code... <br> More tools Added ✓ have you tried? Open Nav Panel anc check our other cool tools";
     prompt_.disabled = true;
     btn.disabled = true;
       editor.setValue();
