--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -184,7 +184,7 @@ prompt_.focus();
         return;
       };
       prompt_.blur();
-      gh.innerHTML = "<strong><h3 style='color: cyan;'>🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h3></strong> <br> GENERATING YOUR CODE.. <!---<br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ ---> Please Dont close the tab this process can take upto 10 seconds Please Be patient <div style='margin-top: 3px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code... <br> <h3 style='color: cyan;'>More tools Added ✓ have you tried? Open Nav Panel anc check our other cool tools</h3>";
+      gh.innerHTML = "<strong><h3 style='color: cyan;'>🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h3></strong> <br> GENERATING YOUR CODE.. <!---<br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ ---> Please Dont close the tab this process can take upto 10 seconds Please Be patient <div style='margin-top: 3px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code... <br> <h3 style='color: cyan;'>More tools Added ✓ have you tried? Open Nav Panel and check our other cool tools all are free of cost and no ads in the website 🥳 enjoy</h3>";
     prompt_.disabled = true;
     btn.disabled = true;
       editor.setValue();
@@ -203,7 +203,7 @@ fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector(
   editor.setValue(dy.result.data[0]);
   prompt_.disabled = false;
   btn.disabled = false;
-  gh.innerHTML = "Your Code Generated Successfully ✅";
+  gh.innerHTML = "Your Code Generated Successfully ✅ <br> Not Getting satisfying result?, dont worry We are going to add a new model in this site for free which is 1000 X more powerful and can generate code with explanation and you can also debug your code ✓; New model comming soon 🥳, but now go and check our other tools in nav bar";
   editor.setReadOnly(false);
   gcode.scrollIntoView({
   behavior: "smooth",
