--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -108,7 +108,7 @@
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
 <h1>AI code generator : generate code using AI in any language Without Login</h1>
-  <h3 style="color:cyan;">🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h3>
+  <h3 style="color:cyan;">🥳 Updated ✓ with 1000 X powerfull model 🤖</h3>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
@@ -122,7 +122,7 @@
     box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white;">
   GENERATE CODE  
   </button>
-  <h3 style="color: cyan;">🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h3>
+  <h3 style="color: cyan;">🥳 Updated ✓ with 1000 X powerfull model 🤖</h3>
 </div>
 <br>
 
@@ -134,7 +134,7 @@
 <div id="editor" style="width: 90%; margin: 0 auto; height: 70%;" class="ace_dark ace-rk"></div>
 
 
-<h2>Our AI tool helps you generate code from your prompt without any api key ir login required, a process also known as Text-to-Code. Our AI can generate code in most languages, and you can also debug your code using our tool.</h2>
+<h2>Our AI tool helps you generate code from your prompt without any api key or login required, a process also known as Text-to-Code. Our AI can generate code in most languages, and you can also debug your code using our tool.</h2>
 
 <!--- FAQ --->
 
@@ -185,7 +185,7 @@ prompt_.focus();
         return;
       };
       prompt_.blur();
-      gh.innerHTML = "<strong><h4 style='color: cyan;'>🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h4></strong> GENERATING YOUR CODE.. <!---<br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ ---> Please Dont close the tab this process can take upto 10 seconds Please Be patient <div style='margin-top: 3px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code... <br> <h4 style='color: cyan;'>More tools Added ✓ have you tried? Open Nav Panel and check our other cool tools all are free of cost and no ads in the website 🥳 enjoy</h4>";
+      gh.innerHTML = "<strong><h4 style='color: cyan;'>🥳 Updated ✓ with 1000 X powerfull model 🤖</h4></strong> GENERATING YOUR CODE.. <!---<br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ ---> Please Dont close the tab this process can take upto 10 seconds Please Be patient <div style='margin-top: 3px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code... <br> <h4 style='color: cyan;'>More tools Added ✓ have you tried? Open Nav Panel and check our other cool tools all are free of cost and no ads in the website 🥳 enjoy</h4>";
     prompt_.disabled = true;
     btn.disabled = true;
       editor.setValue();
@@ -204,7 +204,7 @@ fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector(
   editor.setValue(dy.result.data[0]);
   prompt_.disabled = false;
   btn.disabled = false;
-  gh.innerHTML = "Your Code Generated Successfully ✅ <br> Not Getting satisfying result?, dont worry We are going to add a new model in this site for free which is 1000 X more powerful and can generate code with explanation and you can also debug your code ✓; New model comming soon 🥳, but now go and check our other tools in nav bar";
+  gh.innerHTML = "Your Code Generated Successfully ✅ ";
   editor.setReadOnly(false);
   gcode.scrollIntoView({
   behavior: "smooth",
