--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -117,7 +117,7 @@
 <span style="font-size: 1em; color: white; margin-left: 4px; margin-top: 14px;">Your Prompt: </span>
   <textarea maxlength="1000" placeholder="Enter What You want to Generate" id="prmpt" style="margin-top: 4px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
   <br>
- <a style="color: cyan; font-size: 28px;" href="">Use New 1000 X powerfull Model (⚠️ Beta ⚠️)</a>
+ <a style="color: cyan; font-size: 28px;" href="https://tool-sphere.github.io/tools/code-generator-ai/new/beta/" target="_blank">Use New 1000 X powerfull Model (⚠️ Beta ⚠️)</a>
   <button id="genbtn" onclick="generate()" style="margin-top: 10px; width: 70%; height: 3em; background-color: transparent; color: black; font-size: 2em; border-radius: 12px; border: 1px gold solid; margin-bottom: 18px;
     box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white;">
   GENERATE CODE  
