--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -251,6 +251,7 @@ var jdkd = (codeblock.exec(texat));
         name: jdkd[1] ?? "bash",
         code: jdkd[2] ?? ""
     }*/
+      console.log(jdkd);
       var newtexti = texat.replace(codeblock, `<pre><code>${(jdkd[2]).replace(/<br>/g, "\n")}</code></pre>`);
       editor.innerHTML = `${newtexti}`;
       
