--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -243,7 +243,7 @@ if (localStorage.getItem('cookieConsentAccepted')) {
   cookieConsent.style.display = 'none';
   }
 
-    function parseCodeBlocks(texat) {
+    function parseCodeBlocks(texatt) {
   const codeblock = /```(?:([a-zA-Z0-9]+)\s*)?([\s\S]+?)```/;
 //var jdkd = (codeblock.exec(texat));
 // <pre><code class="language-html">...</code></pre>
@@ -251,11 +251,11 @@ if (localStorage.getItem('cookieConsentAccepted')) {
         name: jdkd[1] ?? "bash",
         code: jdkd[2] ?? ""
     }*/
-    //  var texat = texat.replace(codeblock, `<pre><code>${(jdkd[2]).replace(/<br>/g, "\n")}</code></pre>`);
+      var texat = texatt.replace(codeblock, `<pre><code>${(jdkd[2]).replace(/<br>/g, "\n")}</code></pre>`);
     //  editor.innerHTML = `${newtexti}`;
   var match;
-      while ((match = codeblock.exec(text)) !== null) {
-      var texat = texat.replace(codeblock, `<pre><code>${(jdkd[2]).replace(/<br>/g, "\n")}</code></pre>`);
+      while ((match = codeblock.exec(texat)) !== null) {
+      var texat = texat.replace(codeblock, `<pre><code>${(match[2]).replace(/<br>/g, "\n")}</code></pre>`);
     }   
    editor.innerHTML = `${texat}`;
    }
