--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -268,9 +268,10 @@ if (localStorage.getItem('cookieConsentAccepted')) {
       //var texat = texat.replace(codeblock, `<pre style="margin: 0;"><code style="border-radius: 12px;">${(match[2]).trim().replace(/\n/g, '*:*nl*:*')}</code></pre>`))
         let tempEditor = document.createElement("div");
         tempEditor.style = "width: 90%; height: auto; margin: 0 auto;";
+        console.log(tempEditor);
         let aceTempEditor = ace.edit(tempEditor);
-        aceTempEditor.setValue = (match[2]).trim().replace(/\n/g, '*:*nl*:*')
-        console.log(tempEditor.outerHTML);
+        //aceTempEditor.setValue = (match[2]).trim().replace(/\n/g, '*:*nl*:*')
+        console.log(tempEditor);
         //texat.replace(codeblock, tempEditor.outerHTML);
     }   
    //editor.innerHTML = `${texat.replace(/\n/g, "<br>").replace(/\*\:\*nl\*\:\*/g, "\n")}`;
