--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -269,9 +269,9 @@ if (localStorage.getItem('cookieConsentAccepted')) {
         let tempEditor = document.createElement("div");
         tempEditor.style = "width: 90%; height: auto; margin: 0 auto;";
         console.log(tempEditor);
-        let aceTempEditor = ace.edit(tempEditor);
+        //let aceTempEditor = ace.edit(tempEditor);
         //aceTempEditor.setValue = (match[2]).trim().replace(/\n/g, '*:*nl*:*')
-        console.log(tempEditor);
+        //console.log(tempEditor);
         //texat.replace(codeblock, tempEditor.outerHTML);
     }   
    //editor.innerHTML = `${texat.replace(/\n/g, "<br>").replace(/\*\:\*nl\*\:\*/g, "\n")}`;
