--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -265,10 +265,11 @@ if (localStorage.getItem('cookieConsentAccepted')) {
     //  editor.innerHTML = `${newtexti}`;
   var match;
       while ((match = codeblock.exec(texat)) !== null) {
-      //var texat = texat.replace(codeblock, `<pre style="margin: 0;"><code style="border-radius: 12px;">${(match[2]).trim().replace(/\n/g, '*:*nl*:*')}</code></pre>`))
-        let tempEditor = document.createElement("div");
-        tempEditor.style = "width: 90%; height: auto; margin: 0 auto;";
-        console.log(tempEditor);
+     console.log("pilled");
+        //var texat = texat.replace(codeblock, `<pre style="margin: 0;"><code style="border-radius: 12px;">${(match[2]).trim().replace(/\n/g, '*:*nl*:*')}</code></pre>`))
+     //   let tempEditor = document.createElement("div");
+      //  tempEditor.style = "width: 90%; height: auto; margin: 0 auto;";
+    //    console.log(tempEditor);
         //let aceTempEditor = ace.edit(tempEditor);
         //aceTempEditor.setValue = (match[2]).trim().replace(/\n/g, '*:*nl*:*')
         //console.log(tempEditor);
