--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -248,7 +248,13 @@ if (localStorage.getItem('cookieConsentAccepted')) {
   var texat = texatt; //.replace(codeblock, `<pre><code>${(jdkd[2]).replace(/<br>/g, "\n")}</code></pre>`);
     //  editor.innerHTML = `${newtexti}`;
   var match;
-    /*  while ((match = codeblock.exec(texat)) !== null) {
+      console.log(codeblock.exec(texat))      
+        console.log(codeblock.exec(texat))
+        console.log(codeblock.exec(texat))
+            console.log(codeblock.exec(texat))
+            console.log(codeblock.exec(texat))
+      
+      /*  while ((match = codeblock.exec(texat)) !== null) {
      console.log("pilled");
         console.log(match[2]);
         //var texat = texat.replace(codeblock, `<pre style="margin: 0;"><code style="border-radius: 12px;">${(match[2]).trim().replace(/\n/g, '*:*nl*:*')}</code></pre>`))
