--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -248,11 +248,12 @@ if (localStorage.getItem('cookieConsentAccepted')) {
   let texat = texatt; //.replace(codeblock, `<pre><code>${(jdkd[2]).replace(/<br>/g, "\n")}</code></pre>`);
     //  editor.innerHTML = `${newtexti}`;
   var match;
-    
+ 
         while ((match = codeblock.exec(texat)) !== null) {
         let tempEditor = await document.createElement("div");
-         tempEditor.style = "width: 90%; height: 100px; margin: 0 auto; background-color: white;";
-            //    console.log(tempEditor);
+         tempEditor.style = "width: 90%; height: 500px; margin: 0 auto; background-color: white; overflow: auto;";
+         tempEditor.style.classList.add
+          //    console.log(tempEditor);
         let aceTempEditor = await ace.edit(tempEditor);
         aceTempEditor.setValue = await (match[2]).trim().replace(/\n/g, '*:*nl*:*')
        texat = await texat.replace(codeblock, tempEditor.outerHTML)
