--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -252,7 +252,7 @@ if (localStorage.getItem('cookieConsentAccepted')) {
         while ((match = codeblock.exec(texat)) !== null) {
         let tempEditor = await document.createElement("div");
          tempEditor.style = "width: 90%; height: 500px; margin: 0 auto; background-color: white; overflow: auto;";
-         tempEditor.style.classList.add
+         tempEditor.classList.add('ace_dark', 'ace-rk')
           //    console.log(tempEditor);
         let aceTempEditor = await ace.edit(tempEditor);
         aceTempEditor.setValue = await (match[2]).trim().replace(/\n/g, '*:*nl*:*')
