--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -132,7 +132,7 @@
     <span id="bang" style="display: block; font-size: 22px; color: #00f541; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Generate Your Code now</span> <br>
     
   </div>
-<div id="editor" style="width: 90%; margin: 0 auto; height: 70%; overflow: auto;" class="ace_dark ace-rk"></div>
+<div id="editor" style="width: 90%; margin: 0 auto; height: 70%; overflow: auto;"></div>
 
 
 <h2>Our AI tool helps you generate code from your prompt without any api key or login required, a process also known as Text-to-Code. Our AI can generate code in most languages, and you can also debug your code using our tool.</h2>
